Organize project structure: clean up root directory
- Moved bug reports to docs/bug-reports/
- Moved QA reports to docs/qa-reports/
- Moved testing guides to docs/testing-guides/
- Moved game docs (CHEAT_CODES, GLOSSARY, POWERUPS) to docs/
- Moved dev test scripts to dev_tests/
- Updated .gitignore to exclude dev test scripts
- Root directory now clean with only essential files:
  - README.md, QUICKSTART.md, BACKLOG.md
  - requirements.txt, .env.example, .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,11 @@ Thumbs.db
 
 # Sonrai API Schema (can be regenerated)
 docs/sonrai-api/schema.json
+
+# Development test scripts (moved to dev_tests/)
+dpad_test.py
+monitor_logs.py
+quick_controller_test.py
+test_controller.py
+test_launcher.py
+verify_dpad.py
