Prepare repository for public release
- Updated README.md with new documentation structure
- Added documentation section with links to all docs
- Updated project structure diagram
- Sanitized .env.example (removed internal org IDs)
- Added MIT License
- All sensitive credentials remain in .env (gitignored)
- Repository now ready for public GitHub release

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
 # Sonrai API Configuration
-SONRAI_API_URL=https://crc12185275-graphql-server.sonraisecurity.com/graphql
-SONRAI_ORG_ID=crc12185275
-SONRAI_API_TOKEN=
+SONRAI_API_URL=https://YOUR_ORG-graphql-server.sonraisecurity.com/graphql
+SONRAI_ORG_ID=your_org_id_here
+SONRAI_API_TOKEN=your_api_token_here
 
-# AWS Account Filter
-AWS_ACCOUNT=577945324761
+# AWS Account Filter (optional - leave blank to fetch all accounts)
+AWS_ACCOUNT=
 DAYS_SINCE_LAST_LOGIN=0
 
 # Game Configuration
