--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -58,4 +58,6 @@ repos:
     rev: v3.0.3
     hooks:
       - id: pylint
-        args: ['--disable=C0111,C0103,R0913']  # Disable specific checks
+        args: [
+          '--disable=C0111,C0103,R0913,C0301,C0302,R0914,R0912,R0911,R0915,W1203,W0718,W0719,W0707,R1705,C0415,W0511,E0401,W1309'
+        ]  # Disable style checks for large API client
