devex: add VS Code configuration (DEVEX-003)
- Add .vscode/settings.json: Python config, formatting, linting
- Add .vscode/launch.json: 7 debug configurations (game, tests, coverage)
- Add .vscode/extensions.json: Recommended extensions
- Add .vscode/tasks.json: Common tasks (run, test, lint, format)
- Update .gitignore to include .vscode/ for better DevEx
- Update BACKLOG.md to mark DEVEX-003 as complete

Features:
- Auto-format on save with Black
- Integrated testing with pytest
- Debug configurations for game and tests
- Security scanning tasks
- Code quality tools (pylint, mypy, bandit)

DevEx Agent Review: Approved

--- a/.gitignore
+++ b/.gitignore
@@ -39,7 +39,7 @@ htmlcov/
 .coverage.*
 
 # IDE
-.vscode/
+# .vscode/ - Now included for better developer experience (DEVEX-003)
 .idea/
 *.swp
 *.swo
