feat: implement arcade photo booth selfie feature
Phase 1-5 complete:
- PhotoBoothController with consent flow and state machine
- RetroFilter with 8-bit pixelation and 16-color palette
- PhotoBoothCompositor generating 1920x1080 composites
- Game engine integration with consent prompt before arcade
- Renderer integration with photo booth consent UI
- Keyboard (Y/N, A/B) and controller (A/B) input support
- Auto-timeout defaults to no selfie after 5 seconds
- Automatic capture on arcade timer end
- Graceful fallback if webcam unavailable

New files:
- src/photo_booth/__init__.py
- src/photo_booth/config.py
- src/photo_booth/controller.py
- src/photo_booth/retro_filter.py
- src/photo_booth/compositor.py
- tests/test_photo_booth.py (13 tests passing)

Updated:
- requirements.txt (added opencv-python)
- .env.example (photo booth config options)
- src/game_engine.py (photo booth integration)
- src/renderer.py (consent prompt rendering)
- src/models.py (photo booth state fields)

Remaining tasks:
- Flash effect on capture
- Results screen photo preview
- Asset creation (frame overlay, pixel font)
- QR code generation
- Documentation

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,13 @@ GAME_WIDTH=1280          # Base rendering resolution (width)
 GAME_HEIGHT=720          # Base rendering resolution (height)
 FULLSCREEN=false         # Start in fullscreen mode (true/false) - toggle with F11
 TARGET_FPS=60
+
+# Photo Booth Configuration (Arcade Mode selfie feature)
+PHOTO_BOOTH_ENABLED=true                                    # Enable/disable photo booth
+PHOTO_BOOTH_CAMERA_INDEX=0                                  # Webcam device index (0 = default)
+PHOTO_BOOTH_EVENT_NAME=AWS re:Invent 2025                   # Event name on photo
+PHOTO_BOOTH_BOOTH_NUMBER=435                                # Booth number on photo
+PHOTO_BOOTH_QR_URL=https://sonraisecurity.com/zombie-blaster  # QR code destination
+PHOTO_BOOTH_HASHTAG=#SonraiZombieBlaster                    # Hashtag on photo
+PHOTO_BOOTH_OUTPUT_DIR=.kiro/evidence/booth_photos          # Output directory
+PHOTO_BOOTH_CONSENT_TIMEOUT=5.0                             # Seconds before auto-declining selfie
