chore: add photo booth dev scripts and update gitignore
- Add dev_tests for photo booth testing (selfie capture, composites)
- Ignore booth_photos and recording GIFs (user-generated)

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,9 @@ verify_dpad.py
 reports/
 *.sarif
 venv/
+
+# Photo booth generated images (user-specific)
+.kiro/evidence/booth_photos/
+
+# Evidence recordings (can be regenerated)
+.kiro/evidence/recordings/*.gif
