fix(ci): apply Black formatting to all Python files
- Format 18 files in src/, tests/, and dev_tests/
- Update CI workflow to include dev_tests/ in Black check
- Prevents future CI failures from unformatted code

All 667 tests passing.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,7 +68,7 @@ jobs:
 
     - name: Check code formatting with Black
       run: |
-        black --check src/ tests/ || (echo "Code needs formatting. Run: black src/ tests/" && exit 1)
+        black --check src/ tests/ dev_tests/ || (echo "Code needs formatting. Run: black src/ tests/ dev_tests/" && exit 1)
 
     - name: Run Pylint
       continue-on-error: true
