feat: add re:Invent 2025 stats tracker for arcade mode
Tracks cumulative arcade mode statistics during AWS re:Invent (Dec 1-4, 2025):
- Total zombies quarantined across all sessions
- Highest single-session score
- Highest combo ever achieved
- Total arcade sessions played

Features:
- Auto-enabled during Dec 1-4, 2025 date range
- Persists to reinvent_2025_stats.json (gitignored)
- Generates ready-to-post social media content
- Can be disabled via REINVENT_STATS_ENABLED=false

Usage after re:Invent:
  python3 src/reinvent_stats_tracker.py  # Print summary and social post

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,6 @@ venv/
 
 # Evidence recordings (can be regenerated)
 .kiro/evidence/recordings/*.gif
+
+# re:Invent stats tracking
+reinvent_2025_stats.json
