--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,11 @@ GAME_HEIGHT=720          # Base rendering resolution (height)
 FULLSCREEN=false         # Start in fullscreen mode (true/false) - toggle with F11
 TARGET_FPS=60
 
+# Level Entry Configuration
+AUTO_START_ARCADE=true                                      # Skip menu, auto-start arcade mode for Sandbox
+LEVEL_ENTRY_MODE_SELECTOR_ENABLED=true                      # Show mode selection menu (if AUTO_START_ARCADE=false)
+DEFAULT_LEVEL_ENTRY_MODE=arcade                             # Default highlighted mode: "arcade" or "story"
+
 # Photo Booth Configuration (Arcade Mode selfie feature)
 PHOTO_BOOTH_ENABLED=true                                    # Enable/disable photo booth
 PHOTO_BOOTH_CAMERA_INDEX=0                                  # Webcam device index (0 = default)
