security: gitignore aws_accounts.csv, add example template
- Add assets/aws_accounts.csv to .gitignore (contains real AWS account numbers)
- Create assets/aws_accounts.csv.example with placeholder data
- Update README with setup step for AWS accounts configuration

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 .env
 .env.local
 
+# AWS account configuration (contains real account numbers)
+assets/aws_accounts.csv
+
 # Kiro steering files with secrets (should use env vars instead)
 .kiro/steering/*-secrets.md
 
