chore: improve gitignore for public release
- Remove aws_accounts.csv from tracking (contains real account numbers)
- Remove evidence screenshots from tracking (user-generated)
- Remove evidence recordings from tracking (user-generated)
- Add BOOTH_*.png pattern to gitignore
- Add *.bak pattern to gitignore

Files remain locally but won't be in public repo.

--- a/.gitignore
+++ b/.gitignore
@@ -70,9 +70,14 @@ venv/
 
 # Photo booth generated images (user-specific)
 .kiro/evidence/booth_photos/
+BOOTH_*.png
 
-# Evidence recordings (can be regenerated)
-.kiro/evidence/recordings/*.gif
+# Evidence screenshots and recordings (can be regenerated)
+.kiro/evidence/screenshots/
+.kiro/evidence/recordings/
 
 # re:Invent stats tracking
 reinvent_2025_stats.json
+
+# Backup files
+*.bak
